--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Highlights by HTML5 UP</title>
+		<title>Justin Le</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,8 +16,9 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Justin Le</h1>
+					<p>An all-in-one rock climber, philosophy enthusiast, Marvel & Star Wars Nerd, and <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ">YouTuber</a></p>
+					<p>Oh, and a pre-med Biochemistry student</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
