--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</header>
 				<div class="container">
 					<ul class="actions special">
-						<li><a href="#one" class="button primary scrolly">Begin</a></li>
+						<li><a href="#one" class="button primary scrolly">Start Here</a></li>
 					</ul>
 				</div>
 			</section>
@@ -33,9 +33,9 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I am a Junior studying Biochemistry on the pre-medical track at Arizona State University who loves to dissect the ideas of philosophers and apply them to my own life. Through this, I hope to help others improve upon their lives by giving them glimpses into the lessons I've learned.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -47,17 +47,17 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Stuff I do</h2>
+							<h2>Favorite Things</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>Here are some of the things I do in my spare time. Click on an icon to learn more!</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ"><span class="fab solid major fa-youtube" style="font-size:48px"></span></a>
+								<a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ"><h3>YouTube</h3></a>
 							</li>
 							<li>
 								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Lorem Ipsum</h3>
+								<h3>Blog</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-code"></span>
