--- a/home.html
+++ b/home.html
@@ -40,10 +40,10 @@
 								<li><a href="elements.html">Elements Reference</a></li>
 							</ul>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-goodreads"><span class="label">GoodReads</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="https://www.goodreads.com/user/show/107714099-justin-le" class="icon brands fa-goodreads"><span class="label">GoodReads</span></a></li>
+								<li><a href="https://www.instagram.com/zenniful/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://open.spotify.com/user/zenniful?si=QED8J5F5Sl2l1BLUlThmCw" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
 							</ul>
 						</nav>
 
@@ -65,53 +65,30 @@
 						</div>
 
 					<!-- Footer -->
-						<footer id="footer">
+					<footer id="footer">
+
+						<section class="split contact">
+							<section class="alt">
+								<h3>YouTube</h3>
+								<p>Click <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ"> here </a> to get
+								a glimpse into my life</p>
+							</section>
+
 							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="3"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" /></li>
-									</ul>
-								</form>
+								<h3>Email</h3>
+								<p><a href="#">justinle@asu.edu</a></p>
 							</section>
-							<section class="split contact">
-								<section class="alt">
-									<h3>YouTube</h3>
-									<p>Click <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ"> here </a> to get <br />
-									a glimpse into my life</p>
-								</section>
-								<section>
-									<h3>Phone</h3>
-									<p><a href="#">(000) 000-0000</a></p>
-								</section>
-								<section>
-									<h3>Email</h3>
-									<p><a href="#">justinle@asu.edu</a></p>
-								</section>
-								<section>
-									<h3>Social</h3>
-									<ul class="icons alt">
-										<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									</ul>
-								</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+									<li><a href="https://www.goodreads.com/user/show/107714099-justin-le" class="icon brands fa-goodreads"><span class="label">GoodReads</span></a></li>
+									<li><a href="https://www.instagram.com/zenniful/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://open.spotify.com/user/zenniful?si=QED8J5F5Sl2l1BLUlThmCw" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+								</ul>
 							</section>
-						</footer>
+						</section>
+					</footer>
 
 					<!-- Copyright -->
 						<div id="copyright">
