--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul class="links">
-								<li><a href="home.html">Welcome</a></li>
+								<li><a href="index.html">Welcome</a></li>
 								<li class="active"><a href="blog.html">Blog</a></li>
 								<li><a href="elements.html">Elements Reference</a></li>
 							</ul>
@@ -158,7 +158,7 @@
 								<p>Click <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ"> here </a> to get
 								a glimpse into my life</p>
 							</section>
-					
+
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">justinle@asu.edu</a></p>
