--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul class="links">
-								<li class="active"><a href="home.html">Welcome</a></li>
+								<li class="active"><a href="index.html">Welcome</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="elements.html">Elements Reference</a></li>
 							</ul>
