--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Justin Le</h1>
-						<p>An all-in-one rock climber, philosophy enthusiast, Marvel & Star Wars Nerd, and <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ">YouTuber</a></p>
+						<p>An all-in-one rock climber, wannabe philosophy enthusiast, Marvel & Star Wars Nerd, and <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ">YouTuber</a></p>
 						<p>Oh, and a pre-med Biochemistry student</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -55,9 +55,9 @@
 									<header class="major">
 										<hr> </hr>
 										<h1>About Me</h1>
-										<p>I am a Junior studying Biochemistry on the pre-medical track at Arizona State University who loves to dissect the ideas of philosophers and apply them to my own life. Through this, I hope to help others improve upon their lives by giving them glimpses into the lessons I've learned.</p>
+										<p>I am a Junior studying Biochemistry on the pre-medical track at Arizona State University .</p>
 									</header>
-									<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+									<div class="image main"><img src="me.jpg" alt="" /></div>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
 								</section>
@@ -92,7 +92,7 @@
 
 					<!-- Copyright -->
 						<div id="copyright">
-							<ul><li>&copy; Justin Le 2020</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+							<ul><li>&copy; Justin Le 2020</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Wallpaper: <a href="https://www.instagram.com/rlodzn/">@rlodzn on Instagram</a></li></ul>
 						</div>
 
 					</div>
