--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Justin Le</h1>
-						<p>An all-in-one rock climber, wannabe philosophy enthusiast, Marvel & Star Wars Nerd, and <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ">YouTuber</a></p>
+						<p>An all-in-one rock climber, Marvel & Star Wars Nerd, green tea lover, and <a href="https://www.youtube.com/channel/UCRCoMcZlPOC0QN8dpRQYrGQ">YouTuber</a></p>
 						<p>Oh, and a pre-med Biochemistry student</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -55,7 +55,7 @@
 									<header class="major">
 										<hr> </hr>
 										<h1>About Me</h1>
-										<p>I am a Junior studying Biochemistry on the pre-medical track at Arizona State University .</p>
+										<p>I am a Junior studying Biochemistry on the pre-medical track at Arizona State University. In my own time, I make YouTube videos about my life and write about my thoughts on the various books, movies, and podcasts I stumble upon.</p>
 									</header>
 									<div class="image main"><img src="me.jpg" alt="" /></div>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
